Style Adjust - Fixed Align
Se agrego un align-items center para solucionar apariencia desordenanada en la seccion .perfil

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ nav{
 .perfil-cont{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
